# f1analysis

f1_analysis/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
f1_analysis/f1_analysis/: fetch_api_data.py
