[tool.poetry]
name = "f1-analysis"
version = "0.1.0"
description = ""
authors = ["cdlsol <carloslopez.cl265@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
kaggle = "^1.6.17"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
